<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <!-- Título "Registrarse" -->
    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_title"
        android:textColor="@color/primary_text"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_gravity="start"/>

    <!-- Campo de Nombre -->
    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:backgroundTint="@color/tertiary_text" />

    <!-- Campo de Apellido Completo -->
    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name_label"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:backgroundTint="@color/tertiary_text" />

    <!-- Campo de Teléfono -->
    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_label"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:minHeight="48dp"
        android:backgroundTint="@color/tertiary_text" />

    <!-- Campo de Correo -->
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:backgroundTint="@color/tertiary_text" />

    <!-- Campo de Contraseña -->
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:backgroundTint="@color/tertiary_text" />

    <!-- Campo de Confirmar Contraseña -->

    <!-- Botón de Registrarse -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register_button"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:textColor="@color/button_text" />

    <!-- Línea divisora -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginTop="24dp" />

</LinearLayout>