<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <!-- Icono -->
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="125dp"
        android:layout_height="64dp"
        android:contentDescription="@string/icon_description"
        android:src="@drawable/logopet2_photoroom" />

    <!-- Nombre de la App -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <!-- Descripción -->
    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:gravity="center" />

    <!-- Título "Iniciar Sesión" -->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_title"
        android:textColor="@color/primary_text"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_gravity="start"/>

    <!-- Campo de Email -->
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:backgroundTint="@color/tertiary_text" />

    <!-- Campo de Contraseña -->
    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="start"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:backgroundTint="@color/tertiary_text" />

    <!-- Enlace de contraseña olvidada -->
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/accent"
        android:layout_marginTop="8dp" />

    <!-- Botón de Inicio de Sesión -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_button"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:textColor="@color/button_text" />

    <!-- Texto "¿No tienes cuenta? Click aquí!" -->
    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textColor="@color/accent"
        android:layout_marginTop="16dp" />

    <!-- Línea divisora -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginTop="24dp" />

</LinearLayout>
